--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint ./src",
-    "lint:fix": "eslint ./src --fix",
+    "lint:fix": "eslint ./src --fix ",
     "format": "prettier --write ./src"
   },
   "eslintConfig": {
@@ -63,6 +63,7 @@
   "lint-staged": {
     "*.js": [
       "npm run lint:fix",
+      "prettier --write ./src",
       "git add"
     ]
   }
