--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
   "lint-staged": {
     "*.js": [
       "npm run lint:fix",
-      "prettier --write ./src",
+      "npm run format",
       "git add"
     ]
   }
